# Biteva-chat-core

./: .gitignore  BitevaChat_System.md  Cargo.toml  README.md  ROADMAP.md  changelog  changelog.md  p.txt
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bitevachat-cli/: Cargo.toml  build.rs
crates/bitevachat-cli/src/: interactive.rs  main.rs  output.rs  proto.rs  rpc_client.rs
crates/bitevachat-cli/src/commands/: contact.rs  message.rs  mod.rs  node.rs  profile.rs  wallet.rs
crates/bitevachat-cli/src/tests/: cli_tests.rs
crates/bitevachat-crypto/: Cargo.toml
crates/bitevachat-crypto/src/: aead.rs  checksum.rs  ecdh.rs  hash.rs  hd_derive.rs  hkdf.rs  kdf.rs  lib.rs  mac.rs  mnemonic.rs  signing.rs  wordlist.rs
crates/bitevachat-crypto/tests/: bip39_vectors.rs  crypto_vectors.rs
crates/bitevachat-daemon/: Cargo.toml  daemon.example.json
crates/bitevachat-daemon/src/: config.rs  main.rs  wallet_io.rs
crates/bitevachat-gui/: Cargo.toml  build.rs
crates/bitevachat-gui/src/: app.rs  embedded.rs  lib.rs  main.rs  proto.rs  rpc_bridge.rs  theme.rs  wallet_persistence.rs
crates/bitevachat-gui/src/views/: chat.rs  contacts.rs  mod.rs  onboarding.rs  profile.rs  settings.rs
crates/bitevachat-gui/tests/: gui_smoke_tests.rs
crates/bitevachat-network/: Cargo.toml
crates/bitevachat-network/src/: config.rs  discovery.rs  dns_seed.rs  events.rs  gossip.rs  handler.rs  hole_punch.rs  identity.rs  lib.rs  mailbox.rs  nat.rs  protocol.rs  relay.rs  routing.rs  swarm.rs  transport.rs  turn.rs
crates/bitevachat-network/tests/: message_delivery.rs  nat_traversal.rs  two_node_tests.rs
crates/bitevachat-node/: Cargo.toml
crates/bitevachat-node/src/: command.rs  event_loop.rs  incoming.rs  lib.rs  main.rs  maintenance.rs  node.rs  outgoing.rs  pending_scheduler.rs  profile_manager.rs  rate_limiter.rs  spam_filter.rs  trust.rs
crates/bitevachat-node/tests/: profile_tests.rs  spam_tests.rs
crates/bitevachat-protocol/: Cargo.toml
crates/bitevachat-protocol/src/: canonical.rs  cid.rs  e2e.rs  lib.rs  message.rs  nonce.rs  pow.rs  profiles.rs  session.rs  signing.rs  validation.rs
crates/bitevachat-protocol/tests/: e2e_test.rs  protocol_tests.rs
crates/bitevachat-rpc/: Cargo.toml  build.rs
crates/bitevachat-rpc/proto/: bitevachat.proto
crates/bitevachat-rpc/src/: auth.rs  command.rs  config.rs  contact_service.rs  inject.rs  lib.rs  message_service.rs  node_service.rs  server.rs
crates/bitevachat-storage/: Cargo.toml
crates/bitevachat-storage/src/: blocklist.rs  contacts.rs  conversations.rs  encrypted_tree.rs  engine.rs  lib.rs  messages.rs  pending.rs  pending_file.rs  profile.rs  settings.rs  trust.rs
crates/bitevachat-storage/tests/: pending_tests.rs
crates/bitevachat-types/: Cargo.toml
crates/bitevachat-types/src/: config.rs  lib.rs
crates/bitevachat-wallet/: Cargo.toml
crates/bitevachat-wallet/src/: backup.rs  lib.rs  rotation.rs  wallet.rs  wallet_file.rs
crates/bitevachat-wallet/tests/: wallet_tests.rs
release/windows/: bitevachat-setup.iss
release/windows/files/: LICENSE.txt
