[package]
name = "bitevachat-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line client for Bitevachat"

[[bin]]
name = "bitevachat-cli"
path = "src/main.rs"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-rpc = { path = "../bitevachat-rpc" }
