[package]
name = "bitevachat-network"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "P2P networking: libp2p transport, Kademlia DHT, gossipsub, NAT traversal"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
bitevachat-protocol = { path = "../bitevachat-protocol" }
