[package]
name = "bitevachat-network"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "libp2p network layer for Bitevachat: identity, transport, discovery, messaging, gossip, NAT traversal"

[dependencies]
# --- libp2p: features for transport, discovery, messaging, gossip, NAT ---
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "kad",
    "identify",
    "request-response",
    "gossipsub",
    "macros",
    "autonat",
    "relay",
    "dcutr",
] }

# --- request-response with built-in CBOR codec (serde-based) ---
libp2p-request-response = { version = "0.27", features = ["cbor"] }

# --- Bitevachat workspace crates ---
bitevachat-crypto   = { path = "../bitevachat-crypto" }
bitevachat-types    = { path = "../bitevachat-types" }
bitevachat-protocol = { path = "../bitevachat-protocol" }

# --- CBOR serialization (for canonical bytes in handler) ---
ciborium = "0.2"

# --- Async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# --- Stream combinators for Swarm event loop ---
futures = "0.3"

# --- Structured logging ---
tracing = "0.1"

# --- Serialization for NetworkConfig, WireMessage, Ack ---
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"