[package]
name = "bitevachat-protocol"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Message protocol: canonical CBOR serialization, signing, E2E encryption"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
