[package]
name = "bitevachat-protocol"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Message protocol: canonical CBOR serialization, signing, validation, replay protection"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"