[package]
name = "bitevachat-storage"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Encrypted storage engine: message store, conversation index, pending queue"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
bitevachat-protocol = { path = "../bitevachat-protocol" }

sled = "0.34"
serde = { version = "1", features = ["derive"] }
bincode = "1"
zeroize = { version = "1", features = ["derive"] }
chrono = "0.4"

[features]
rocksdb = []