[package]
name = "bitevachat-wallet"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Wallet lifecycle management: creation, encryption, backup, key rotation"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
