[package]
name = "bitevachat-wallet"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "Wallet lifecycle management: creation, encryption, backup, key rotation"

[dependencies]
bitevachat-types = { path = "../bitevachat-types" }
bitevachat-crypto = { path = "../bitevachat-crypto" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
zeroize = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }